# tf-fastapi-serverless

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  get_started.sh  pyproject.toml  requirements.txt
src/: inference.py  inference_old.py  main.py  ml-config.yaml  models.py  pydantic_models.py  response_models.py  user.py  utils.py  worker.py
tests/: test_utils.py  test_worker.py
tests/mock_data/: fake-ml-config.yaml
